--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -4,5 +4,7 @@ option_settings:
     PYTHONPATH: "/var/app/current:$PYTHONPATH"
   aws:elasticbeanstalk:container:python:
     WSGIPath: "MTBS3.wsgi:application"
-
+option_settings:
+  aws:elasticbeanstalk:environment:proxy:staticfiles:
+    /static: static
   
